--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "gatsby": "^2.13.42",
+    "gatsby-source-filesystem": "^2.1.6",
+    "gatsby-transformer-remark": "^2.6.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
